<resources>
    <string name="app_name">Let\'s Event</string>
    <string name="let_s_event">Let\'s Event!</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="change_city">Выбрать город</string>
    <string name="back_btn"><![CDATA[<]]></string>
    <string name="notices_label">Уведомления</string>
    <string name="news_label">Новости</string>
    <string name="saved_label">Избранное</string>
    <string name="chat_label">Чаты</string>
    <string name="user_photo">user_photo</string>
    <string name="user_logo">user_logo</string>
    <string name="user_mail">user_mail@gmail.com</string>
    <string name="user_profile">Личный аккаунт</string>
    <string name="user_business_profile">Бизнес аккаунт</string>
    <string name="count_subscription">25 подписок</string>
    <string name="count_subscriber">25 подписчиков</string>
    <string name="count_events_attended">2 посещенных мероприятия</string>
    <string name="exit">Выйти из аккаунта</string>
    <string name="settings">Настройки</string>
    <string name="events_attended">Посещенные мероприятия</string>
    <string name="go_to_attended"><![CDATA[>]]></string>
    <string name="attended_events">Посещенные мероприятия</string>
    <string name="settings_label">Настройки</string>
    <string name="change_theme">Темная тема</string>
    <string name="change_akk">Бизнес аккаунт</string>
    <string name="event_image">event_image</string>
    <string name="gotoevent">goToEvent</string>
    <string name="goToEvent">Пойду!</string>
    <string name="countPeople">256 участников</string>
    <string name="eventName">Название</string>
    <string name="eventDate">Дата</string>
    <string name="eventAddress">Адрес</string>
    <string name="eventDescription">Описание</string>
    <string name="edit_profile">Редактировать профиль</string>
    <string name="user_name">Имя</string>
    <string name="email">Email</string>
    <string name="save">Сохранить изменения</string>
    <string name="edit_yser_pass">Изменить пароль</string>
    <string name="current_user_pass">Текущий пароль</string>
    <string name="new_user_pass">Новый пароль</string>
    <string name="confirm_new_user_pass">Повторите новый пароль</string>
    <string name="change_pass">Изменить пароль</string>
    <string name="no_events_in_city">В данный момент таких мероприятий нет</string>
    <string name="reg_titel">Регистрация</string>
    <string name="emailHint">example@gmail.com</string>
    <string name="emailLabel">Почта</string>
    <string name="passLabel">Пароль</string>
    <string name="repPassLabel">Повторите пароль</string>
    <string name="reg_btn">Зарегестрироваться</string>
    <string name="alreadyHaveLabel">Уже есть аккаунт?</string>
    <string name="loginBtn">Войти</string>
    <string name="loginLabel">Вход</string>
    <string name="no_acc_yet">Еще нет аккаунта?</string>
    <string name="logoutLabel">Выход</string>
    <string name="ShureLabel">Вы уверены?</string>
    <string name="logoutBtn">Выйти</string>
    <string name="cancelBtn">Отмена</string>
    <string name="publishedEventBtn">Опубликованные мероприятия</string>
    <string name="publishEventBtn">Опубликовать мероприятие</string>
    <string name="editEvent">Редактировать</string>
    <string name="addNews">Добавить новость</string>
    <string name="goToChat"><b>Открой для себя мир общения! 🗨</b>\n\nЗнаешь ли ты, что в приложении можно не только искать мероприятия, но и найти новых друзей?\n\nПрисоединяйся к активным пользователям и начинай строить своё сообщество прямо сейчас!</string>
    <string name="change_category">Выбрать категорию</string>
    <string name="users_list">Пользователи</string>
    <string name="dialog_item">Диалог</string>
    <string name="find_friend">Поиск друзей</string>
</resources>