<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_gravity="center"
    android:layout_height="wrap_content"
    >

    <androidx.cardview.widget.CardView
        android:backgroundTint="@color/pastel_blue"
        android:id="@+id/card_reg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="20dp"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView"
                style="@style/TextColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:fontFamily="monospace"
                android:text="@string/reg_titel"
                android:textAlignment="center"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/emailLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:text="@string/emailLabel"
                android:textColor="@color/grey"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                tools:ignore="MissingConstraints,TextContrastCheck" />

            <EditText
                android:id="@+id/emailEditText"
                android:layout_width="306dp"
                android:layout_height="55dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/rounded_edit_text"
                android:hint="@string/emailHint"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:padding="10dp"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/emailLabel"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/passLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:text="@string/passLabel"
                android:textColor="@color/grey"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/emailEditText"
                tools:ignore="MissingConstraints,TextContrastCheck" />

            <EditText
                android:id="@+id/passEditText"
                android:layout_width="304dp"
                android:layout_height="56dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/rounded_edit_text"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:padding="10dp"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/passLabel"
                tools:ignore="MissingConstraints,SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/repPassLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:importantForAutofill="no"
                android:text="@string/repPassLabel"
                android:textColor="@color/grey"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/passEditText"
                tools:ignore="MissingConstraints,TextContrastCheck" />

            <EditText
                android:id="@+id/repPassEditText"
                android:layout_width="301dp"
                android:layout_height="51dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/rounded_edit_text"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:padding="10dp"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/repPassLabel"
                tools:ignore="MissingConstraints,SpeakableTextPresentCheck" />

            <Button
                android:id="@+id/reg_btn"
                style="@style/ButtonForLabelColor"
                android:layout_width="319dp"
                android:layout_height="48dp"
                android:layout_margin="10dp"
                android:onClick="goToAttended"
                android:radius="20dp"
                android:text="@string/reg_btn"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/repPassEditText"
                tools:ignore="MissingConstraints,VisualLintButtonSize" />

            <TextView
                android:id="@+id/alreadyHaveLabel"
                style="@style/TextColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:layout_marginHorizontal="20dp"
                android:text="@string/alreadyHaveLabel"
                android:textAlignment="center"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/reg_btn"
                tools:ignore="MissingConstraints" />

            <Button
                android:id="@+id/loginBtn"
                android:backgroundTint="@color/pastel_blue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:text="@string/loginBtn"
                android:textAlignment="center"
                android:textColor="@color/blue"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/alreadyHaveLabel"
                tools:ignore="MissingConstraints,TextContrastCheck" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>